testcases/pos/batch/test53.tig
/* define a function */
let
    function f(n: int): int = 42
in
    f(10)
end
