testcases/neg/sem/break_nested.tig
/* break in nested function not allowed */
while 1 do 
    let function foo(): int = (break; 1)
    in ()
    end
